# tts-mos-test-mturk

./: .gitignore  CITATION.cff  MANIFEST.in  Pipfile  README.md  create-template.sh  pyproject.toml
etc/: example.json  example.sh
examples/: example.json
mturk-template/: audio.html  create-template.sh  create-upload-csv.sh  footer.html  header-two-opts-alt.html  header-two-opts.html  header.html
src/mturk_template/: convert_to_json.py  data_point.py  example.json  example_df_creation.py  logging.py
src/mturk_template_cli/: cli.py  example_parser.py  init_parser.py  types.py
src/mturk_template_tests/convert_to_json_py/: test_convert_to_json.py  test_parse_listening_type.py
src/tts_mos_test_mturk/: __init__.py  analyze_assignmens.py  api.py  api_parser.py  common.py  core_error.py  correlations.py  csv_parser.py  data_point.py  df_generation.py  evaluation_data.py  example_df_creation.py  filtering.py  filtering_old.py  globals.py  grand_bonuses.py  io.py  logging.py  masks.py  plot_correlations.py  plot_ratings.py  plot_ratings_per_group.py  plot_ratings_per_worker.py  result.py  t_test.py  types.py  typing.py
src/tts_mos_test_mturk/__old/: analyze_assignmens.py  csv_parser.py  etc.py  grand_bonuses.py
src/tts_mos_test_mturk/calculation/: compute_mos_ci95_3gaussian.py  corrcoef.py  correlations.py  etc.py  mos_variance.py  mos_variance_backup.py  remove_outliers.py
src/tts_mos_test_mturk/core/: bad_worker_filtering.py  data_point.py  df_generation.py  evaluation_data.py  logging.py  masks.py  stats.py
src/tts_mos_test_mturk/core/masking/: assignment_count_mask.py  bad_worker_mask.py  listening_device_mask.py  masked_count_mask.py  outlier_mask.py  worker_correlation_mask.py  worktime_mask.py
src/tts_mos_test_mturk/core/statistics/: algorithm_sentence_stats.py  algorithm_worker_stats.py  update_stats.py  worker_assignment_stats.py
src/tts_mos_test_mturk/filtering/: listening_type_filtering.py
src/tts_mos_test_mturk/masking/: age_group_mask.py  assignment_count_mask.py  assignment_id_mask.py  bad_worker_mask.py  etc.py  gender_mask.py  listening_device_mask.py  mask_factory.py  masked_count_mask.py  masks.py  merge.py  outlier_mask.py  reverse.py  state_mask.py  time_mask.py  work_time_mask.py  worker_correlation_mask.py  worker_id_mask.py  worktime_mask.py
src/tts_mos_test_mturk/statistics/: algorithm_sentence_stats.py  algorithm_worker_stats.py  globals.py  update_stats.py  worker_assignment_stats.py
src/tts_mos_test_mturk_cli/: argparse_helper.py  cli.py  default_args.py  globals.py  helper.py  logging_configuration.py  main.py  types.py  validation.py
src/tts_mos_test_mturk_cli/parsers/: __init__.py  api_parsers.py  approve_parser.py  bad_workers_parser.py  bad_workers_percent_parser.py  bonus_parser.py  calculation_parser.py  example_parser.py  export_algorithm_sentence_stats.py  export_algorithm_worker_stats.py  export_ground_truth_parser.py  export_worker_assignment_stats_parser.py  init_parser.py  listening_device_parser.py  masking_parsers.py  masks_parsers.py  mturk_parsers.py  os_count_parser.py  outlier_parser.py  reject_parser.py  stats_parser.py  stats_parsers.py  too_fast_parser.py  too_few_parser.py
src/tts_mos_test_mturk_cli/parsers/api/: api_approve_parser.py  api_bonus_parser.py  api_reject_parser.py  bonus_parser.py  reject_parser.py
src/tts_mos_test_mturk_cli/parsers/masking/: bad_workers_parser.py  bad_workers_percent_parser.py  listening_device_parser.py  mask_assignments_by_listening_device_parser.py  mask_assignments_by_work_time_parser.py  mask_outlying_scores_parser.py  mask_scores_by_masked_count_parser.py  mask_workers_by_assignment_count_parser.py  mask_workers_by_correlation_parser.py  os_count_parser.py  outlier_parser.py  too_fast_parser.py  too_few_parser.py
src/tts_mos_test_mturk_cli/parsers/statistics/: calculation_parser.py  common.py  export_algorithm_sentence_stats.py  export_algorithm_worker_stats.py  export_ground_truth_parser.py  export_worker_assignment_stats_parser.py  stats_parser.py
src/tts_mos_test_mturk_debug/: cli.py  create_test_csv.py  crowdMOS-pipeline.sh  debug_core.py  export_text_sel.py  parse_csv.py
src/tts_mos_test_mturk_tests/analyse_assignments_py/: test_get_algorithm_mos_correclation.py  test_get_corrcoef.py  test_get_sentence_mos_correclation.py
src/tts_mos_test_mturk_tests/calculations/corrcoef_py/: test_corrcoef.py
src/tts_mos_test_mturk_tests/calculations/correlations_py/: test_get_algorithm_mos_correclation.py  test_get_algorithm_mos_correlation.py  test_get_corrcoef.py  test_get_sentence_mos_correclation.py  test_get_worker_mos_correlation.py
src/tts_mos_test_mturk_tests/calculations/etc_py/: test_lower_outliers.py  test_mask_outliers.py  test_mask_smaller_than_val.py  test_mask_workers.py  test_mask_workers_percent_mask.py  test_matlab_tinv.py
src/tts_mos_test_mturk_tests/calculations/mos_variance_py/: test_compute_alg_mos_ci95.py  test_compute_mos.py  test_get_corrcoef.py  test_get_custom_variance.py  test_get_mean_vertical_variance.py  test_get_v_mu.py  test_matlab_tinv.py  test_non_nan_count.py
src/tts_mos_test_mturk_tests/calculations/test_etc_py/: test_lower_outliers.py  test_mask_workers.py  test_matlab_tinv.py
src/tts_mos_test_mturk_tests/common_py/: test_get_rating.py  test_get_ratings.py
src/tts_mos_test_mturk_tests/correlations_py/: test_get_algorithm_mos_correlation.py  test_get_corrcoef.py  test_get_sentence_mos_correlation.py  test_get_worker_mos_correlation.py
src/tts_mos_test_mturk_tests/evaluation_data_py/: test_EvaluationData.py
src/tts_mos_test_mturk_tests/masking/etc_py/: test_mask_values_in_boundary.py  test_sort_indices_after_values.py
src/tts_mos_test_mturk_tests/result_py/: test_parse_result_from_json.py  test_parse_time.py
src/tts_mos_test_mturk_tests/statistics_py/: test_get_overlaps.py
src/tts_mos_test_mturk_tests/test_filtering_py/: test_get_ignore_fast_hits_mask.py
src/tts_mos_test_mturk_tests/types_py/: test_parse_results.py
template/: footer.html
(+12 files in other folders)
