[project]
name = "tts-mos-test-mturk"
version = "0.0.1"
description = "CLI and library to compute the Mel-Cepstral Distance of two WAV files based on the paper 'Mel-Cepstral Distance Measure for Objective Speech Quality Assessment' by Robert F. Kubichek."
readme = "README.md"
requires-python = ">=3.8, <3.12"
license = {text = "MIT"}
authors = [
  {name = "Jasmin Sternkopf", email = "jasmin.sternkopf@mathematik.tu-chemnitz.de"},
  {name = "Stefan Taubert", email = "pypi@stefantaubert.com"}
]
maintainers = [
  {name = "Stefan Taubert", email = "pypi@stefantaubert.com"},
]
keywords = [
  "TTS",
  "Text-to-speech",
  "Speech synthesis",
  "MCD",
  "Mel",
  "DTW",
  "Dynamic Time Warping",
  "Cepstral",
  "Spectrogram",
  "Distance",
  "Divergence",
  "Distortion",
  "Language",
  "Linguistics"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "pandas",
  "tqdm",
  "boto3",
  "boto3-stubs",
  "xmltodict",
]

[project.urls]
Homepage = "https://github.com/jasminsternkopf/tts_mos_test_mturk"
Issues = "https://github.com/jasminsternkopf/tts_mos_test_mturk/issues"

[project.scripts]
mos-cli = "tts_mos_test_mturk_cli.cli:run_prod"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "tts_mos_test_mturk",
  "tts_mos_test_mturk_cli"
]
exclude = [
  "tts_mos_test_mturk_tests",
  "tts_mos_test_mturk_debug"
]
namespaces = true

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
testpaths = [
  "src/tts_mos_test_mturk_tests",
]

[tool.autopep8]
indent-size = 2
ignore = ["E121"]
max_line_length = 100

[tool.isort]
line_length = 100
indent = 2
known_first_party = [
  "tts_mos_test_mturk",
  "tts_mos_test_mturk_cli"
]
known_third_party = [
  "librosa",
  "numpy",
  "scipy",
  "fastdtw"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310}
isolated_build = True

[testenv]
deps = 
  pytest
commands = 
  pytest
  mos-cli
  mos-cli -v
"""

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"
