[project]
name = "tts-mos-test-mturk"
version = "0.0.2"
description = "Command-line interface to evaluate text-to-speech mean opinion score studies done on Amazon Mechanical Turk."
readme = "README.md"
requires-python = ">=3.8, <3.12"
license = {text = "MIT"}
authors = [
  {name = "Stefan Taubert", email = "pypi@stefantaubert.com"}
]
maintainers = [
  {name = "Stefan Taubert", email = "pypi@stefantaubert.com"},
]
keywords = [
  "TTS",
  "Text-to-speech",
  "Speech synthesis",
  "Mean Opinion Score",
  "Amazon Mechanical Turk",
  "Language",
  "Linguistics",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy",
  "pandas",
  "tqdm",
  "ordered-set>=4.1.0",
  "mean-opinion-score==0.0.2",
]

[project.urls]
Homepage = "https://github.com/stefantaubert/tts-mos-test-mturk"
Issues = "https://github.com/stefantaubert/tts-mos-test-mturk/issues"

[project.scripts]
mos-cli = "tts_mos_test_mturk_cli.cli:run_prod"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "tts_mos_test_mturk",
  "tts_mos_test_mturk.*",
  "tts_mos_test_mturk_cli",
  "tts_mos_test_mturk_cli.*",
  "tts_mos_test_mturk_tests",
  "tts_mos_test_mturk_tests.*",
]
exclude = [
  "tts_mos_test_mturk_debug",
  "tts_mos_test_mturk_debug.*",
]
namespaces = true

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
testpaths = [
  "src/tts_mos_test_mturk_tests",
]

[tool.autopep8]
indent-size = 2
ignore = ["E121"]
max_line_length = 100

[tool.isort]
line_length = 100
indent = 2
known_first_party = [
  "tts_mos_test_mturk",
  "tts_mos_test_mturk_cli",
  "tts_mos_test_mturk_tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310,311}
isolated_build = True

[testenv]
deps = 
  pytest
commands = 
  pytest
  mos-cli
  mos-cli -v
"""

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"
